--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,9 @@
 
     <div class="graph-container">
       <!-- Añadir timestamp a las imágenes -->
-      <img src="{{ url_for('static', filename='images/S(k)_cc.png') }}?t={{ timestamp }}" alt="S(k)_cation-cation">
-      <img src="{{ url_for('static', filename='images/S(k)_aa.png') }}?t={{ timestamp }}" alt="S(k)_anion-anion">
-      <img src="{{ url_for('static', filename='images/S(k)_ca.png') }}?t={{ timestamp }}" alt="S(k)_cation-anion">
+      <img src="{{ url_for('static', filename='tmp/S(k)_cc.png') }}?t={{ timestamp }}" alt="S(k)_cation-cation">
+      <img src="{{ url_for('static', filename='tmp/S(k)_aa.png') }}?t={{ timestamp }}" alt="S(k)_anion-anion">
+      <img src="{{ url_for('static', filename='tmp/S(k)_ca.png') }}?t={{ timestamp }}" alt="S(k)_cation-anion">
     </div>
 
     <hr>
