--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
 
   <label for="name">Choose an option:</label>
   <select name="Option" id="option" size="2">
-    <option value="Structure"> Arrested or fluid, and S(k) </option>
-    <option value="Dynamics">Diffusion coeffient and MSD</option>
+    <option value="Structure"> Arrested or fluid, and S(k). </option>
+    <option value="Dynamics">Diffusion coeffient and MSD (still working on this).</option>
   </select><br>
 
   <input type="submit" value="Calculate">
