--- a/templates/index.html
+++ b/templates/index.html
@@ -87,9 +87,9 @@
         <p> These are the S(k): </p>
 
         <div class="graph-container">
-            <img src="./static/images/S(k)_cc.png" alt="S(k)_cation-cation">
-            <img src="./static/images/S(k)_aa.png" alt="S(k)_cation-cation">
-            <img src="./static/images/S(k)_ca.png" alt="S(k)_cation-cation">
+            <img src="./static/temp/S(k)_cc.png" alt="S(k)_cation-cation">
+            <img src="./static/temp/S(k)_aa.png" alt="S(k)_cation-cation">
+            <img src="./static/temp/S(k)_ca.png" alt="S(k)_cation-cation">
         </div>
         <hr>
         <div class="download-links">
