--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,8 @@
 <div id="loadingMessage">
     <div class="spinner"></div>
     <div>
-        Por favor espera, el programa está corriendo.<br>
-        Esto tomará alrededor de 5-10 minutos...
+        Please wait, the program is running.<br>
+        This will take about 5-10 minutes...
     </div>
 </div>
 
