--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,8 @@
 
     <label for="option">Choose an option:</label>
     <select name="Option" id="option" size="2">
-        <option value="Structure">Arrested or fluid, and S(k)</option>
-        <option value="Dynamics">Diffusion coefficient and MSD</option>
+        <option value="Structure">Arrested or fluid, and S(k).</option>
+        <option value="Dynamics">Diffusion coefficient and MSD (still working on this, be patient please).</option>
     </select><br><br>
 
     <input type="submit" value="Calculate">
