--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
         <hr>
 
         {% if select_option == "Structure" %}
-        <p>These are the S(k) for phi = {{ phi }} and T* = {{ ts }}:</p>
+        <p>These are the S(k)s for phi = {{ phi }} and T* = {{ ts }}:</p>
         <div class="graph-container">
             <img src="{{ url_for('static', filename='tmp/Sk_cc.png') }}" alt="S(k)_cation-cation">
             <img src="{{ url_for('static', filename='tmp/Sk_aa.png') }}" alt="S(k)_anion-anion">
